# RedNet

./: .gitignore  CMakeLists.txt  README.md  README_GUI.md  gui_mission_test  launch_gui.sh  launch_shell.sh  main.cpp  mission_demo  package_mac_app.sh  set_rednet_dock_icon.sh
ai/: AIAgent.cpp  AIAgent.h  AIAgentManager.cpp  AIAgentManager.h
engine/: Exploit.cpp  Exploit.h  Node.cpp  Node.h  Payload.cpp  Payload.h  Scanner.cpp  Scanner.h
missions/: Mission.cpp  Mission.h  README.md  demo_missions.sh  gui_mission_test.cpp  mission_001_reconnaissance.json  mission_002_initial_access.json  mission_003_privilege_escalation.json  mission_004_full_pentest.json  mission_launcher.cpp
network/: NetworkGraph.cpp  NetworkGraph.h  TopologyGenerator.cpp  TopologyGenerator.h
resources/: Info.plist  RedNet.icns  icon.icns
shell/: Shell.cpp  Shell.h
ui/: AdvancedVisualizer.cpp  AdvancedVisualizer.h  Visualizer.cpp  Visualizer.h
ui/desktop/: ImGuiDashboard.cpp  ImGuiDashboard.h
utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
